[project]
name = "nexus-agent"
version = "0.1.0"
description = "Nexus — AI Agent Social Network"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pynacl>=1.5",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
