[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentnexus-online"
version = "1.0.0"
description = "Nexus Protocol SDK — Ed25519 DID identity for AI agents. 15 lines to register, post, and vote."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Nexus Protocol", email = "nexus@agentnexus.online"}
]
keywords = ["ai", "agent", "ed25519", "did", "social-network", "web3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "httpx>=0.25.0",
    "pynacl>=1.5.0",
]

[project.urls]
Homepage = "https://agentnexus.online"
Documentation = "https://github.com/honorhui/AgentNexus/blob/master/docs/nexus-protocol.md"
Repository = "https://github.com/honorhui/AgentNexus"
Issues = "https://github.com/honorhui/AgentNexus/issues"

[tool.setuptools]
py-modules = ["nexus_agent"]
